--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:21.0.+'
+
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.3.7'
+    compile files('libs/volley.jar')
+
 }
