--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sathish.discussionforum" >
+    package="sathish.discussionforum">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".AppController"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:largeHeap="true"
+        android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".activities.LoginActivty"
+            android:label="@string/title_activity_login_activty"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".activities.AuthenticateActivity"
+            android:label="@string/title_activity_authenticate"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".activities.BrowseQuestionsActivity"
+            android:label=" Discussions"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".activities.OnClickQuestionActivity"
+            android:label="Solution">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.BrowseQuestionsActivity" />
         </activity>
     </application>
 
