--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
-            android:screenOrientation="portrait"
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".activities.LoginActivty"
+            android:label="@string/title_activity_login_activty"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,21 +23,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".activities.LoginActivty"
-            android:label="@string/title_activity_login_activty"/>
-        <activity
-            android:screenOrientation="portrait"
             android:name=".activities.AuthenticateActivity"
-            android:label="@string/title_activity_authenticate"/>
+            android:label="@string/title_activity_authenticate"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".activities.BrowseQuestionsActivity"
-            android:label=" Discussions"/>
+            android:label=" Discussions"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".activities.OnClickQuestionActivity"
-            android:label="Solution">
+            android:label="Solution"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.BrowseQuestionsActivity" />
